# BottlenecksWithinGNN

./: .gitignore  LICENSE  Motivation.md  README.md  flake.nix  pyproject.toml
.github/workflows/: latex_ci.yml  typst_ci.yml
QM9/: Manifest.toml  Project.toml  README.md  table1-gat.csv
QM9/src/: QM9.jl
QM9_benchmark/: gcn_mlp.py  models.py  qm9_train_test.py
TOGL_experiments/: dataset.py  model.py  pyproject.toml  train_model.py
benchmarking/topognn/: model.py  test.py
five_nodes/: dataset.py  models.py  train.py
five_nodes_regression/: 1layermodel.py  2layermodel.py
graph_benchmark/: README.md  curvature.py  dataset.py  fully_adjacent.py  homework  main.py  new_fully_adjacent.py  summary.jl
graph_benchmark/results/: runs.csv
literature/: sources.md
over_smoothing_experiemnts/: cora-paths.ipynb
report/: .gitignore  loss_3d.pgf  main (SFConflict cvd306@alumni.ku.dk 2024-10-03-10-54-01).tex  main.tex  main.typ  sources.bib  template.typ  tree_experiment_graph.tex
three_nodes/: dataset.py  models.py  pyproject.toml  train.py
three_nodes_classification/: dataset.py  loss_3d.pgf  mlp2-2.py  models.py  plot_loss.py  plot_output_layer.py  summary.jl  train.py
three_nodes_regression/: models.py  summary.jl  train.py
tree_neighbours_match/: .gitignore  Dockerfile  MODI_GUIDE.md  bayes_grid_search.py  data.csv  dataset.py  gcn_mlp.py  init_env.sh  models.py  modi_sweep.yaml  plot.jl  run_agents.sh  run_agents.sh.container_wrap  start_train_sweep.py  summary.jl  sweep_config.yaml  train.py  train_agent.py  train_progressive.py  train_with_wandb.py
(+5 files in other folders)
