[tool.poetry]
name = "bachelor-project"
version = "0.1.0"
description = ""
authors = ["Joshua Niemelä <josh@jniemela.dk>", "Mustafa Al-Abdelamir <muhe@di.ku.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torch-geometric = "^2.5.3"
matplotlib = "^3.9.2"
wandb = "^0.17.9"
scipy = "^1.14.1"
bayesian-optimization = "^2.0.1"
safetensors = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
explicit = true