[project]
name = "alt-togl-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.9"
dependencies = [
    "torch-topological (>=0.1.7,<0.2.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
